Fixed the overflow in the suggestion popup

--- a/resources/jquery.ui/themes/default/jquery.ui.autocomplete.css
+++ b/resources/jquery.ui/themes/default/jquery.ui.autocomplete.css
@@ -45,6 +45,8 @@
 	padding:.2em .4em;
 	line-height:1.5;
 	zoom:1;
+	text-overflow: ellipsis;
+    overflow-x: hidden;
 }
 .ui-menu .ui-menu-item a.ui-state-hover,
 .ui-menu .ui-menu-item a.ui-state-active {
